style/index.css
body {
  background-color: rgb(233, 233, 233);
  /* height: 300%; */
  margin: 0;
}

p {
  margin: 0;
}

h1 {
  font-family: Maven Pro, Arial;
  font-size: 300%;
  padding-left: 20%;
  margin-bottom: -5px;
}

h1::first-letter {
  font-size: 130%;
}

h2 {
  font-family: Maven Pro, Arial;
  padding-left: 5%;
  margin-bottom: -5px;
}

h2::first-letter {
  font-size: 130%;
}

hr {
  border: 0;
  height: 1px;
  width: 75%;
  background: #333;
  margin-bottom: 20;
  background-image: linear-gradient(to right, #ccc, #333, #ccc);
}

.footer {
  right: 0;
  bottom: 0;
  left: 0;
  padding: 1rem;
  text-align: center;
  background-color: rgb(233, 233, 233);
  font-size: 80%;
}

button:focus {
  outline: 0;
}

button:active:focus {
  outline: 0;
}

button::-moz-focus-inner {
  border: 0px;
}

.center {
  display: table;
  margin: 0 auto;
}

.name-text {
  font-family: Cantarell, Arial;
  font-size: 450%;
  animation: 1s ease 0s normal forwards 1 fadein-name;
  white-space: nowrap;
  display: inline-block;
}

#large-letter{
  font-size: 130%;
  margin-right: -0.25em;
}

.name-text.first {
  margin-bottom: -25px;
  margin-right: 0.25em;
}

.name-text.second {
  margin-top: -25px;
}

.name-container {
  margin-top: 200px;
  margin-bottom: -20px;
  text-align: center;
}

.motto-text {
  text-align: center;
  font-family: Cantarell, Arial;
  font-size: 200%;
  margin-bottom: -20px;
  animation-fill-mode: forwards;
}

.motto-text.first {
  animation: 3s ease 0s normal forwards 1 fadein-motto-top;
  margin-bottom: -5;
}

.motto-text.second {
  animation: 3s ease 0s normal forwards 1 fadein-motto-bottom;
}

.meet-me {
  margin-top: 28%;
  padding-top: 2px;
  padding-bottom: 2px;
  background-color: rgb(215, 215, 215);
}

.meet-me-text-frame {
  display: flex;
}

.meet-me-container {
  width: 70%;
  margin: auto;
  margin-bottom: 20;
  display: table;
}

.meet-me-container > p {
  font-family: Maven Pro, Arial;
  margin-left: 10;
  float: left;
}

.meet-me-text-container {
  font-family: Maven Pro, Arial;
}

.meet-me-text-container > p {
  padding-bottom: 20;
  /* font-size: 2vh; */
}

.meet-me-text-container > h4 {
  font-family: Cantarell, Arial;
  /* font-weight: bold; */
}

.occupation-container {
  width: 70%;
  margin: auto;
  margin-bottom: 20;
  display: flex;
  flex-wrap: wrap;
}

.occupation-image {
  margin-right: 5;
  margin-left: 5;
  margin-top: 5;
  margin-bottom: 5;
  position: relative;
}

.occupation-image-overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: rgb(233, 233, 233);
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
}

.occupation-text {
  font-family: Maven Pro, Arial;
  font-size: 175%;
  text-align: center;
}

.occupation-image:hover .occupation-image-overlay {
  opacity: 1;
}

.image {
  display: block;
  width: 100%;
  height: auto;
}

.social-media-icon {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.2rem;
}

#text-align-right {
  text-align: right;
}

#text-align-left {
  text-align: left;
}

.my-work {
  display: inline-block;
}

.occupation-section {
  background-color: rgb(215, 215, 215);
  width: 90%;
  display: table;
  margin: 0 auto;
  margin-top: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
}

.occupation-section > h2 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.inline-span {
  display: inline
}

.inline-span > p {
  margin-bottom: 1rem;
}

.occupation-location {
  float: left;
  font-family: Cantarell, Arial;
  margin-right: 0.4rem;
}

.occupation-placeholder {
  margin-bottom: 3rem;
}

.social-media-links {
  margin-left: 0.2rem;
}

.values {
  background-color: rgb(215, 215, 215);
  padding-bottom: 0.5rem;
}

.values-box {
  width: 30%;
  font-family: Cantarell, Arial;
  white-space: nowrap;
  font-size: 150%;
  text-align: center;
  display: table;
  margin: auto;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.meet-me-container div {
   min-height: 200px;
   padding: 10px;
}

.left-top {
  float: left;
  width: 486px;
  margin-right: 0.5rem;
}

.right-bottom {
  overflow:hidden;
  min-height:170px;
}

.right-top {
  float: right;
  width: 486px;
  margin-right: 0.5rem;
}

.left-bottom {
  overflow:hidden;
  min-height:170px;
}

#linkedin-icon {
  filter: brightness(700%);
}

#github-icon {
  filter: brightness(850%);
}

#resume-icon {
  filter: brightness(350%);
}

@keyframes fadein-name{
    0% { opacity: 0; }
    100% { opacity: 1; }
}

@keyframes fadein-motto-top{
    0% { opacity: 0; }
    33% { opacity: 0; }
    66% { opacity: 1; }
    100% { opacity: 1; }
}

@keyframes fadein-motto-bottom{
    0% { opacity: 0; }
    33% { opacity: 0; }
    66% { opacity: 0; }
    100% { opacity: 1; }
}

@media screen and (max-width: 1100px) {
   .left-top {
    float: none;
    margin-right:0;
    width:auto;
    border:0;
  }
  .right-top {
   float: none;
   margin-left:0;
   width:auto;
   border:0;
 }
}

